# image_mapping

./: .gitignore  CMakeLists.txt  README.md  compile_and_run.sh  map_image
include/: findlocation.h  templatematch.h
src/: findlocation.cpp  main.cpp  templatematch.cpp
